--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500&display=swap");
 
 :root {
@@ -174,6 +173,12 @@ h3 {
   cursor: pointer;
   transition: var(--transition);
   box-shadow: var(--shadow-dark);
+}
+
+.tweet-container .post-quote:hover,
+.new-quote:hover {
+  background: var(--twitter-col);
+  color: var(--white);
 }
 
 @media (min-width: 800px) {
